Working edge-to-edge. Updated to BS4.0. Need to fix text overflow and remove 0.0 prices.

--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -78,3 +78,7 @@ body
 
 .slider.rzslider .rz-selection
     background: #BABABA
+
+.col-xs-11
+  width: 9%
+  float: left
